--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
     commands:
       # Your build commands here
       - echo "Building..."
+      - sleep 30
 
   post_build:
     commands:
